test/classes/deitz/test_inherit_mod3.good
test_inherit_mod3.chpl:11: In function 'foo':
test_inherit_mod3.chpl:12: error: Unresolved call ':C.x'
error: Candidates are:
test_inherit_mod3.chpl:4: error:   :D1.x
test_inherit_mod3.chpl:8: error:   :D2.x
